--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
 		"next": "latest",
 		"next-themes": "^0.3.0",
 		"react": "18.2.0",
-		"react-dom": "18.2.0"
+		"react-dom": "18.2.0",
+		"zod": "^3.23.8"
 	},
 	"devDependencies": {
 		"@types/node": "20.10.6",
