--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
 		"@radix-ui/react-select": "^2.1.1",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@radix-ui/react-tabs": "^1.1.0",
+		"@supabase-cache-helpers/postgrest-react-query": "^1.10.1",
 		"@supabase/ssr": "latest",
 		"@supabase/supabase-js": "latest",
+		"@tanstack/react-query": "^5.56.2",
 		"autoprefixer": "10.4.17",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
