--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"eslint-plugin-tailwindcss": "^3.17.4",
 		"postcss": "8.4.33",
 		"prettier": "^3.3.3",
+		"supabase": "^1.200.3",
 		"tailwind-merge": "^2.5.2",
 		"tailwindcss": "3.4.1",
 		"tailwindcss-animate": "^1.0.7",
